[package]
name                   = "clipcat-dbus-variant"
description            = "Clipcat D-Bus variant"
version.workspace      = true
authors.workspace      = true
homepage.workspace     = true
readme.workspace       = true
repository.workspace   = true
license.workspace      = true
edition.workspace      = true
rust-version.workspace = true
categories.workspace   = true
keywords.workspace     = true

[dependencies]
serde = { workspace = true }

zvariant = { workspace = true }

mime = { workspace = true }
time = { workspace = true }

clipcat-base = { workspace = true }

[lints]
workspace = true
