[package]
name                 = "clipcat-external-editor"
description          = "Clipcat external editor"
version.workspace    = true
authors.workspace    = true
homepage.workspace   = true
readme.workspace     = true
repository.workspace = true
license.workspace    = true
edition.workspace    = true
categories.workspace = true
keywords.workspace   = true

[dependencies]
tokio = { version = "1", features = ["fs", "process", "rt-multi-thread"] }

snafu = "0.8"

clipcat-base = { path = "../base" }

[lints]
workspace = true
