[package]
name                   = "clipcat-external-editor"
description            = "Clipcat external editor"
version.workspace      = true
authors.workspace      = true
homepage.workspace     = true
readme.workspace       = true
repository.workspace   = true
license.workspace      = true
edition.workspace      = true
rust-version.workspace = true
categories.workspace   = true
keywords.workspace     = true

[dependencies]
tokio = { workspace = true }

snafu = { workspace = true }

clipcat-base = { workspace = true }

[lints]
workspace = true
