[package]
name                   = "clipcat-metrics"
description            = "Clipcat metrics utilities"
version.workspace      = true
authors.workspace      = true
homepage.workspace     = true
repository.workspace   = true
readme.workspace       = true
license.workspace      = true
edition.workspace      = true
rust-version.workspace = true
categories.workspace   = true
keywords.workspace     = true

[dependencies]
async-trait = { workspace = true }
tokio       = { workspace = true }

axum       = { workspace = true }
tower      = { workspace = true }
tower-http = { workspace = true }

bytes      = { workspace = true }
mime       = { workspace = true }
once_cell  = { workspace = true }
prometheus = { workspace = true }
snafu      = { workspace = true }

[lints]
workspace = true
