[package]
name                   = "clipcat-proto"
description            = "Clipcat protobuf"
version.workspace      = true
authors.workspace      = true
homepage.workspace     = true
readme.workspace       = true
repository.workspace   = true
license.workspace      = true
edition.workspace      = true
rust-version.workspace = true
categories.workspace   = true
keywords.workspace     = true

[dependencies]
prost       = { workspace = true }
prost-types = { workspace = true }
tonic       = { workspace = true }

mime = { workspace = true }
time = { workspace = true }

clipcat-base = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
prost-build = { workspace = true }

[lints]
workspace = true
