[package]
name                 = "clipcat-server"
description          = "Clipcat server"
version.workspace    = true
authors.workspace    = true
homepage.workspace   = true
readme.workspace     = true
repository.workspace = true
license.workspace    = true
edition.workspace    = true
categories.workspace = true
keywords.workspace   = true

[dependencies]
tracing = "0.1"

bincode    = "1"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

async-trait = "0.1"
futures = "0.3"
sigfinn = "0.1"
tokio = { version = "1", features = [
  "fs",
  "macros",
  "rt-multi-thread",
  "sync",
] }
tokio-stream = { version = "0.1", features = ["net"] }

tonic = { version = "0.10", features = ["gzip"] }

humansize = "2"
lazy_static = "1"
mime = "0.3"
notify-rust = "4"
parking_lot = "0.12"
semver = "1"
snafu = "0.7"
time = { version = "0.3", features = [
  "formatting",
  "macros",
  "parsing",
  "serde",
] }

clipcat-base      = { path = "../base" }
clipcat-clipboard = { path = "../clipboard" }
clipcat-proto     = { path = "../proto" }

[lints]
workspace = true
