[package]
name                   = "clipcat-server"
description            = "Clipcat server"
version.workspace      = true
authors.workspace      = true
homepage.workspace     = true
readme.workspace       = true
repository.workspace   = true
license.workspace      = true
edition.workspace      = true
rust-version.workspace = true
categories.workspace   = true
keywords.workspace     = true

[dependencies]
tracing = { workspace = true }

bincode    = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }

async-trait  = { workspace = true }
futures      = { workspace = true }
sigfinn      = { workspace = true }
tokio        = { workspace = true }
tokio-stream = { workspace = true }

tonic = { workspace = true }

zbus     = { workspace = true }
zvariant = { workspace = true }

hex         = { workspace = true }
humansize   = { workspace = true }
mime        = { workspace = true }
notify      = { workspace = true }
notify-rust = { workspace = true }
once_cell   = { workspace = true }
parking_lot = { workspace = true }
prometheus  = { workspace = true }
regex       = { workspace = true }
semver      = { workspace = true }
simdutf8    = { workspace = true }
snafu       = { workspace = true }
time        = { workspace = true }

clipcat-base         = { workspace = true }
clipcat-clipboard    = { workspace = true }
clipcat-dbus-variant = { workspace = true }
clipcat-metrics      = { workspace = true }
clipcat-proto        = { workspace = true }

[lints]
workspace = true
